--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         	<ul class="stars">
         		<li><i class="fa fa-star"></i></li>
         		<li><i class="fa fa-star"></i></li>
-        		<li><i class="fa fa-star"></i></li>
+        	<li><i class="fa fa-star"></i></li>
         	</ul>
 
-        	<span class="moves">3</span> Moves
+        	<span class="moves">0</span> Moves
 
             <div class="restart">
         		<i class="fa fa-repeat"></i>
@@ -30,54 +30,54 @@
         </section>
 
         <ul class="deck">
-            <li class="card">
-                <i class="fa fa-diamond"></i>
+            <!--<li class="card">
+             <i class="fa fa-diamond"></i>
             </li>
-            <li class="card">
+          <li class="card">
                 <i class="fa fa-paper-plane-o"></i>
             </li>
             <li class="card match">
                 <i class="fa fa-anchor"></i>
             </li>
-            <li class="card">
+          <li class="card">
                 <i class="fa fa-bolt"></i>
             </li>
-            <li class="card">
+          <li class="card">
                 <i class="fa fa-cube"></i>
             </li>
             <li class="card match">
                 <i class="fa fa-anchor"></i>
             </li>
-            <li class="card">
+          <li class="card">
                 <i class="fa fa-leaf"></i>
             </li>
-            <li class="card">
+          <li class="card">
                 <i class="fa fa-bicycle"></i>
             </li>
-            <li class="card">
+          <li class="card">
                 <i class="fa fa-diamond"></i>
             </li>
-            <li class="card">
+           <li class="card">
                 <i class="fa fa-bomb"></i>
             </li>
-            <li class="card">
+          <li class="card">
                 <i class="fa fa-leaf"></i>
             </li>
-            <li class="card">
+          <li class="card">
                 <i class="fa fa-bomb"></i>
             </li>
-            <li class="card open show">
+          <li class="card open show">
                 <i class="fa fa-bolt"></i>
             </li>
-            <li class="card">
+          <li class="card">
                 <i class="fa fa-bicycle"></i>
             </li>
             <li class="card">
                 <i class="fa fa-paper-plane-o"></i>
             </li>
-            <li class="card">
+          <li class="card">
                 <i class="fa fa-cube"></i>
-            </li>
+            </li>-->
         </ul>
     </div>
 
