--- a/index.html
+++ b/index.html
@@ -14,70 +14,40 @@
         <header>
             <h1>Matching Game</h1>
         </header>
-
         <section class="score-panel">
+          <div class="timer_container">
+            <div id="display_timer">
+              00:00
+            </div>
+        </div>
         	<ul class="stars">
         		<li><i class="fa fa-star"></i></li>
         		<li><i class="fa fa-star"></i></li>
         	<li><i class="fa fa-star"></i></li>
         	</ul>
-
         	<span class="moves">0</span> Moves
-
             <div class="restart">
         		<i class="fa fa-repeat"></i>
         	</div>
         </section>
-
+        <!-- Structure for modal-->
+           <div class="mondalBackground hide">
+             <div class="mondalContent">
+               <div class="mondalHeading">
+                <h1 className= "mondalTitle">You Won!</h1>
+              </div>
+              <div class="mondalStats">
+                <span class="modal_time">Time:</span>
+                <span class="modal_stars">Stars:</span>
+                <span class="modal_moves">Moves:</span>
+             </div>
+             <div class="mondalButtons">
+               <button class="replayButton modal_button">Replay</button>
+             </div>
+           </div>
+           </div>
+    <!--deck Of cards -->
         <ul class="deck">
-            <!--<li class="card">
-             <i class="fa fa-diamond"></i>
-            </li>
-          <li class="card">
-                <i class="fa fa-paper-plane-o"></i>
-            </li>
-            <li class="card match">
-                <i class="fa fa-anchor"></i>
-            </li>
-          <li class="card">
-                <i class="fa fa-bolt"></i>
-            </li>
-          <li class="card">
-                <i class="fa fa-cube"></i>
-            </li>
-            <li class="card match">
-                <i class="fa fa-anchor"></i>
-            </li>
-          <li class="card">
-                <i class="fa fa-leaf"></i>
-            </li>
-          <li class="card">
-                <i class="fa fa-bicycle"></i>
-            </li>
-          <li class="card">
-                <i class="fa fa-diamond"></i>
-            </li>
-           <li class="card">
-                <i class="fa fa-bomb"></i>
-            </li>
-          <li class="card">
-                <i class="fa fa-leaf"></i>
-            </li>
-          <li class="card">
-                <i class="fa fa-bomb"></i>
-            </li>
-          <li class="card open show">
-                <i class="fa fa-bolt"></i>
-            </li>
-          <li class="card">
-                <i class="fa fa-bicycle"></i>
-            </li>
-            <li class="card">
-                <i class="fa fa-paper-plane-o"></i>
-            </li>
-          <li class="card">
-                <i class="fa fa-cube"></i>
-            </li>-->
         </ul>
     </div>
 
